<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/feature_oauth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginTop="20dp"
        android:onClick="onOauth"
        android:text="@string/weibosdk_demo_feature_oauth" />

    <Button
        android:id="@+id/feature_share"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/weibosdk_demo_feature_share" />
    
    <Button
        android:id="@+id/social_component"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/weibosdk_demo_social_component" />

    <Button
        android:id="@+id/feature_login_logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/weibosdk_demo_feature_login_logout" />
    
    <Button
        android:id="@+id/feature_open_api"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/weibosdk_demo_feature_open_api" />
    
    
     <Button
        android:id="@+id/feature_scheme_page"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:visibility="gone"
        android:text="@string/weibosdk_demo_feature_scheme_page" />
     
     <Button
        android:id="@+id/feature_game"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/weibosdk_demo_feature_game_page" />
     
     <Button
        android:id="@+id/feature_pay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/weibosdk_demo_feature_pay_page" />
     
     <Button
        android:id="@+id/shear_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/weibosdk_demo_shear_message" />
     
     
    <Button
        android:id="@+id/feature_upload_log"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/weibosdk_demo_feature_upload_log" />  
     
     

</LinearLayout>