<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WBAuthActivity" >
    
    <Button
        android:id="@+id/obtain_token_via_sso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="@string/weibosdk_demo_obtain_token_via_sso" />
    
    <Button
        android:id="@+id/obtain_token_via_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:text="@string/weibosdk_demo_obtain_token_via_web" />
    
    <Button
        android:id="@+id/obtain_token_via_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:text="@string/weibosdk_demo_obtain_token_via_sso_all_in_one" />
    
    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:text="@string/weibosdk_demo_obtain_token_logout" />
    
    <Button
        android:id="@+id/obtain_token_via_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:visibility="gone"
        android:text="@string/weibosdk_demo_obtain_token_via_code" />    
    
    <Button
        android:id="@+id/obtain_token_via_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:layout_marginTop="10dip"
        android:text="@string/weibosdk_demo_obtain_token_via_mobile" />
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/weibosdk_demo_token_info" />

    <TextView
        android:id="@+id/token_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />
    

    <TextView
        android:id="@+id/obtain_token_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"
        android:scrollbars="vertical"
        android:maxLines="1000"
        android:text="@string/weibosdk_demo_obtain_token_hint" />

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo" />

</LinearLayout>