<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WBAuthActivity" >
    
    <Button
        android:id="@+id/goto_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="@string/goto_profile" />
    
    
    <Button
        android:id="@+id/goto_hot_weibo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:text="@string/goto_hot_weibo" />
    
    <Button
        android:id="@+id/goto_hot_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:text="@string/goto_hot_topic" />
    
    <Button
        android:id="@+id/goto_send_weibo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:text="@string/goto_send_weibo" />    
        
    
    <Button
	    android:id="@+id/goto_home_message"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:gravity="left|center_vertical"
	    android:text="@string/goto_home_message" />
   

</LinearLayout>