<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WBAuthActivity" >
    <EditText
        android:id="@+id/get_order_uri"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
           android:visibility="gone"
         android:text="@string/weibosdk_demo_weibo_pay_get_order_uri" />

    <Button
        android:id="@+id/weibo_get_order"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/weibosdk_demo_weibo_pay_get_order" />

    <EditText
        android:id="@+id/order"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/weibo_pay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/weibosdk_demo_weibo_pay" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
           android:visibility="gone"
        android:text="@string/weibosdk_demo_support_weibo_pay"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/weibosdk_demo_support_weibo_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>